conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if estFaceMur() {recule();} else {avance();} 
   ^Conditions:3: error: illegal start of simple expression
	}
        ^